--- a/GNKH2021/ClientApp/package.json
+++ b/GNKH2021/ClientApp/package.json
@@ -23,9 +23,12 @@
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@okta/okta-angular": "^3.0.1",
+    "@tensorflow/tfjs-node": "^2.8.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
+    "canvas": "^2.6.1",
     "core-js": "^3.3.3",
+    "face-api.js": "^0.22.2",
     "jquery": "3.4.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
